final-eddition-done

--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <section class="container">
         <div class="card"> 
             <div class="card-img menue1"></div>
-            <h2>title</h2>
+            <h2>Bread</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia 
                 cupiditate facere aperiam distinctio omnis in enim aut
                  magni adipisci necessitatibus.</p>
@@ -23,7 +23,7 @@
         </div>
         <div class="card">
             <div class="card-img menue2"></div>
-            <h2>title</h2>
+            <h2>Soup</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing 
                 elit. Eligendi aliquam dolorum consectetur atque fuga delectu
                 s omnis, fugiat numquam  </p>
@@ -37,7 +37,7 @@
         </div>
         <div class="card">
             <div class="card-img menue3"></div>
-            <h2>title</h2>
+            <h2>Rice</h2>
             <p>Lorem ipsum dolor sit amet consectetur adip
                 isicing elit. Magni eos dolores numquam sapiente veniam blan
                 ditiis tenetur velit consequatur rer</p>
